--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "curso-graphql",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  },
-  "dependencies": {
-    "apollo-server": "^3.5.0",
-    "graphql": "^16.0.1"
-  }
+    "name": "curso-graphql",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "nodemon": "^2.0.15"
+    },
+    "dependencies": {
+        "@graphql-tools/load-files": "^6.5.2",
+        "@graphql-tools/merge": "^8.2.1",
+        "apollo-server": "^3.5.0",
+        "graphql": "^16.0.1",
+        "graphql-tools": "^8.2.0"
+    }
 }
